--- a/_config.yml
+++ b/_config.yml
@@ -1,48 +1,68 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+url: https://vinyltap.band
 
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: VinylTap
+title: Vinyl Tap
 email: philip.b.tyler@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  LA's hottest coverband, churning out 6 decades worth of
-  rocking hits. Book them for your next event!
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://vinyltap.band" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: thephiliptyler
-github_username:  philiptyler
+description: "LA's hottest cover band slinging 6 decades of rock, alternative, pop-punk, and new wave hits"
 
-defaults:
-  - scope:
-      path: "assets/img"
-    values:
-      image: true
+
+# Team names, titles and social links
+people:
+- name: Philip Tyler
+  pic: 1
+  position: Guitar & Vocals
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: stack-overflow
+      url: #
+
+- name: Arthur Siegel
+  pic: 2
+  position: Drums
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: linkedin
+      url: #
+
+- name: Peter Stewart
+  pic: 3
+  position: Guitar & Vocals
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
+- name: Oren Ben-Joseph
+  pic: 3
+  position: Bass Guitar
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: google-plus
+      url: #
+
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: facebook
+    url: https://facebook.com/this.is.vinyltap
+  - title: instagram
+    url: https://instram.com/this.is.vinyltap
+
+# Postal address (add as many lines as necessary)
+address:
+  - line: Los Angeles, CA
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+permalink: pretty
