--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ image: img/card_image.jpg
 thumbnail: img/thumbnail.jpg
 
 # Site settings
-title: Vinyl Tap
+title: "Vinyl Tap: LA's Hottest Cover Band"
 email: philip.b.tyler@gmail.com
 description: "We are a professional cover band slinging 6 decades of rock, alternative, pop-punk, and new wave hits"
 
