--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 url: https://vinyltap.band/
 image: img/card_image.jpg
 thumbnail: img/thumbnail.jpg
+site_title: "Vinyl Tap: LA's Hottest Cover Band"
 
 # Site settings
-title: "Vinyl Tap: LA's Hottest Cover Band"
+title: Vinyl Tap
 email: philip.b.tyler@gmail.com
 description: "We are a professional cover band slinging 6 decades of rock, alternative, pop-punk, and new wave hits"
 
