--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 url: https://vinyltap.band/
 image: img/card_image.jpg
 thumbnail: img/thumbnail.jpg
-site_title: "Vinyl Tap: LA's Hottest Cover Band"
+site_title: "Vinyl Tap: LA's Premiere Cover Band"
 
 # Site settings
 title: Vinyl Tap
 email: philip.b.tyler@gmail.com
-description: "We are a professional cover band slinging 6 decades of rock, alternative, pop-punk, and new wave hits"
+description: "Professional cover band slinging 6 decades of rock, alternative, pop-punk, and new wave hits"
 
 plugins:
   - jekyll-compress-images
